--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -84,7 +84,7 @@ body {
   }
 
   section#content {
-    padding: 60px 40px;
+    padding: 60px 5px;
     @media(min-width: $extra-small-device) {
       padding: 120px 40px;
     }
